--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
+
         <activity
             android:name="com.android.bradholland.bookmark.MainBookActivity"
             android:label="@string/app_name" >
@@ -24,7 +25,10 @@
             android:name=".SignUpActivity"
             android:label="@string/title_activity_signup"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".AddBookActivity"
+            android:label="Add Book"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".DispatchActivity"
             android:noHistory="true" >
