--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:label="@string/title_activity_login"
             android:screenOrientation="portrait" />
         <activity android:name=".bookDetailActivity"
-            android:label="@string/title"
+            android:label=" "
             android:screenOrientation="portrait" />
         <activity
             android:name=".SignUpActivity"
