--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile files('libs/Parse-1.7.0.jar')
     compile "com.android.support:appcompat-v7:21.0.+"
     compile 'com.melnykov:floatingactionbutton:1.0.6'
+    compile 'com.squareup.picasso:picasso:2.3.+'
 }
