--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile "com.android.support:appcompat-v7:21.0.+"
     compile 'com.melnykov:floatingactionbutton:1.0.6'
     compile 'com.squareup.picasso:picasso:2.3.+'
+    compile 'net.danlew:android.joda:2.5.1'
 }
