--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/Parse-1.7.0.jar')
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.+'
+    compile 'com.squareup.picasso:picasso:2.4.0'
     compile "com.android.support:appcompat-v7:21.0.+"
     compile 'com.melnykov:floatingactionbutton:1.1.+'
     compile 'com.squareup.picasso:picasso:2.3.+'
