--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/Parse-1.7.0.jar')
     compile 'com.squareup.picasso:picasso:2.4.0'
-    compile "com.android.support:appcompat-v7:21.0.+"
+    compile 'com.android.support:appcompat-v7:21.0.+'
     compile 'com.melnykov:floatingactionbutton:1.1.+'
     compile 'com.squareup.picasso:picasso:2.3.+'
     compile 'net.danlew:android.joda:2.5.1'
+    compile files('libs/mpandroidchartlibrary-1-7-4.jar')
 }
