--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.bradholland.bookmark" >
+
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name="com.android.bradholland.bookmark.App"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme" >
         <activity
-            android:name="com.android.bradholland.bookmark.BookListActivity"
+            android:name=".BookListActivity"
             android:label="@string/app_name" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".DashboardActivity" />
         </activity>
         <activity
-            android:name="com.android.bradholland.bookmark.LoginActivity"
+            android:name=".LoginActivity"
             android:label="@string/title_activity_login"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="com.android.bradholland.bookmark.bookDetailActivity"
+            android:name=".bookDetailActivity"
             android:label=" "
             android:screenOrientation="portrait" >
             <meta-data
@@ -34,12 +37,12 @@
                 android:value=".BookListActivity" />
         </activity>
         <activity
-            android:name="com.android.bradholland.bookmark.SignUpActivity"
+            android:name=".SignUpActivity"
             android:label="@string/title_activity_signup"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="com.android.bradholland.bookmark.AddBookActivity"
+            android:name=".AddBookActivity"
             android:label="Add Book"
             android:screenOrientation="portrait" >
             <meta-data
@@ -47,7 +50,7 @@
                 android:value=".BookListActivity" />
         </activity>
         <activity
-            android:name="com.android.bradholland.bookmark.DispatchActivity"
+            android:name=".DispatchActivity"
             android:noHistory="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -56,13 +59,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.android.bradholland.bookmark.WelcomeActivity"
+            android:name=".WelcomeActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo" />
         <activity
-            android:name="com.android.bradholland.bookmark.DashboardActivity"
+            android:name=".DashboardActivity"
             android:label="@string/title_activity_dashboard" >
+        </activity>
+        <activity
+            android:name=".GraphActivity"
+            android:label="@string/title_activity_graph" >
         </activity>
     </application>
 
