--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.android.support:appcompat-v7:21.0.+'
     compile 'com.melnykov:floatingactionbutton:1.1.+'
-    compile 'com.squareup.picasso:picasso:2.3.+'
+    compile 'com.r0adkll:slidableactivity:2.0.1'
     compile 'net.danlew:android.joda:2.5.1'
 }
