--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/Parse-1.7.0.jar')
-    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.github.blackfizz:eazegraph:1.2.0@aar'
+    compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.support:appcompat-v7:21.0.+'
     compile 'com.melnykov:floatingactionbutton:1.1.+'
     compile 'com.r0adkll:slidableactivity:2.0.1'
