--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,8 +61,7 @@
         <activity
             android:name=".WelcomeActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".DashboardActivity"
             android:label="@string/title_activity_dashboard" >
