--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.melnykov:floatingactionbutton:1.1.+'
     compile 'com.r0adkll:slidableactivity:2.0.1'
     compile 'net.danlew:android.joda:2.7.1'
+    compile 'com.afollestad:material-dialogs:0.6.3.0'
 }
