--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.support:appcompat-v7:21.0.+'
     compile 'com.melnykov:floatingactionbutton:1.1.+'
-    compile 'com.r0adkll:slidableactivity:2.0.1'
     compile 'net.danlew:android.joda:2.7.1'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
     compile 'com.afollestad:material-dialogs:0.6.3.0'
 }
