--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
             android:label="@string/title_activity_login"
             android:screenOrientation="portrait" >
         </activity>
+        <activity android:name=".Testing" />
+
         <activity
             android:name=".bookDetailActivity"
             android:label=" "
