--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,9 @@ android {
     defaultConfig {
         applicationId "com.android.bradholland.bookmark"
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion
+        renderscriptTargetApi 19
+        renderscriptSupportModeEnabled true
         versionCode 1
         versionName "1.0"
     }
