--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,6 @@
         <activity
             android:name=".BookListActivity"
             android:label="@string/app_name" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".DashboardActivity" />
         </activity>
 
         <activity
@@ -37,7 +34,7 @@
         </activity>
 
         <activity android:name=".LogsActivity"
-            android:label="All logs"
+            android:label="All Reading logs"
             android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
