--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,7 +81,7 @@
         </activity>
         <activity
             android:name=".StatsActivity"
-            android:label="@string/title_activity_graph" >
+            android:label="" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".DashboardActivity" />
