--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'net.danlew:android.joda:2.7.1'
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
     compile 'com.afollestad:material-dialogs:0.6.3.0'
+    compile 'com.github.amlcurran.showcaseview:library:5.0.0'
 }
