--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
     compile 'com.afollestad:material-dialogs:0.6.3.0'
     compile 'com.github.amlcurran.showcaseview:library:5.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
