--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,14 +43,6 @@
         </activity>
 
         <activity
-            android:name=".OldBookDetailActivity"
-            android:label=" "
-            android:screenOrientation="portrait" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".BookListActivity" />
-        </activity>
-        <activity
             android:name=".SignUpActivity"
             android:label="@string/title_activity_signup"
             android:screenOrientation="portrait" >
@@ -87,6 +79,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".DashboardActivity" />
         </activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="b70c66977e60b100875dacde8a981349ead7f9e2" />
     </application>
 
 </manifest>
