--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
     buildToolsVersion "21.1.1"
 
     defaultConfig {
-        applicationId "com.android.bradholland.bookmark"
+        applicationId "com.topdawg.bradholland.bookmark"
         minSdkVersion 15
         targetSdkVersion
         renderscriptTargetApi 19
