--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
         </activity>
         <activity
             android:name=".AddBookActivity"
-            android:label="Add Book"
+            android:label="Add book to library"
             android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
